Search view created + Search API created + Send search query to the WebService and log the result.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TradeMe</string>
     <string name="error_general">Error!</string>
+    <string name="search">Search Trade Me</string>
 </resources>
