Show No Result on zero search result + Hide toolbar on search result page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TradeMe</string>
     <string name="error_general">Error!</string>
     <string name="search">Search Trade Me</string>
+    <string name="no_result">No Result!</string>
 </resources>
